# Developing-Python-Packages

./: README.md
Chapter-1-From-Loose-Code-to-Local-Package/excersize-1-and-2-starting-a-package/: alice.txt  test.py
Chapter-1-From-Loose-Code-to-Local-Package/excersize-1-and-2-starting-a-package/textanalysis/: textanalysis.py
Chapter-1-From-Loose-Code-to-Local-Package/excersizes-3-4-and-5-documentation/impyrial/: __init__.py
Chapter-1-From-Loose-Code-to-Local-Package/excersizes-6-7-and-8-importing/: test.py
Chapter-1-From-Loose-Code-to-Local-Package/excersizes-6-7-and-8-importing/impyrial/: __init__.py
Chapter-2-Install-Your-Package-from-Anywhere/excersizes/mypackages/: requiremnets.txt
Chapter-3-Increasing-Your-Package-Quality/: absolute.py  pythagoras.py
Chapter-3-Increasing-Your-Package-Quality/excersizes-1-2-and-3-install-packages/: test.py
Chapter-4-Rapid-Package-Development/: HISTORY.md
Chapter-4-Rapid-Package-Development/TemplatePackages/Template/: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
Chapter-4-Rapid-Package-Development/TemplatePackages/Template/.github/: ISSUE_TEMPLATE.md
Chapter-4-Rapid-Package-Development/TemplatePackages/Template/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
Chapter-4-Rapid-Package-Development/TemplatePackages/Template/src/Template/: __init__.py  cli.py
Chapter-4-Rapid-Package-Development/TemplatePackages/Template/tests/: __init__.py  test_Template.py
mypackages/impyrial/: setup.py
(+20 files in other folders)
